[package]
name = "viz_rbatis_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
viz = "0.11.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
rbs = { version = "4.6" }
rbatis = { version = "4.6" }
rbdc-pg = { version = "4.6" }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"] }
anyhow = { version = "1.0.99" }
serde_json = "1.0.145"
